helm/curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: curl
      app.kubernetes.io/name: curl
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: curl
        app.kubernetes.io/name: curl
        # sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: curl:8.17.0
        imagePullPolicy: IfNotPresent
        name: curl
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
